force-app/main/default/objects/Transaction__c/fields/Amount_Captured__c.field-meta.xml
<CustomField>
    <fullName>Amount_Captured__c</fullName>
    <label>Amount Captured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>