force-app/main/default/objects/Transaction__c/fields/AmountRefunded__c.field-meta.xml
<CustomField>
    <fullName>AmountRefunded__c</fullName>
    <label>AmountRefunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>