force-app/main/default/objects/Transaction__c/fields/Billing_Street_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Address_Line_2__c</fullName>
    <label>Billing Street Address Line 2</label>
    <type>TextArea</type>
</CustomField>