force-app/main/default/objects/Transaction__c/fields/Connected_Account__c.field-meta.xml
<CustomField>
    <fullName>Connected_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Account</label>
    <referenceTo>Connected_Account__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>