force-app/main/default/objects/Transaction__c/fields/FailureCode__c.field-meta.xml
<CustomField>
    <fullName>FailureCode__c</fullName>
    <label>Failure code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>