force-app/main/default/objects/Transaction__c/fields/FailureMessage__c.field-meta.xml
<CustomField>
    <fullName>FailureMessage__c</fullName>
    <label>Failure reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>