force-app/main/default/objects/Transaction__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Gateway</label>
    <referenceTo>Payment_Gateway__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>