force-app/main/default/objects/Transaction__c/fields/PaymentBankLast4Digits__c.field-meta.xml
<CustomField>
    <fullName>PaymentBankLast4Digits__c</fullName>
    <label>Bank Last 4 Digits</label>
    <length>20</length>
    <type>Text</type>
</CustomField>