force-app/main/default/objects/Transaction__c/fields/PaymentBankName__c.field-meta.xml
<CustomField>
    <fullName>PaymentBankName__c</fullName>
    <label>Bank Name</label>
    <type>TextArea</type>
</CustomField>