force-app/main/default/objects/Transaction__c/fields/PaymentCardLast4Digits__c.field-meta.xml
<CustomField>
    <fullName>PaymentCardLast4Digits__c</fullName>
    <label>Card Last 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>