force-app/main/default/objects/Transaction__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment method used</label>
    <length>50</length>
    <type>Text</type>
</CustomField>