force-app/main/default/objects/Transaction__c/fields/PaymentMethodType__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ach_credit_transfer</fullName>
            </value>
            <value>
                <fullName>ach_debit</fullName>
                <label>ACH</label>
            </value>
            <value>
                <fullName>alipay</fullName>
            </value>
            <value>
                <fullName>bancontact</fullName>
            </value>
            <value>
                <fullName>card</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>card_present</fullName>
            </value>
            <value>
                <fullName>eps</fullName>
            </value>
            <value>
                <fullName>giropay</fullName>
            </value>
            <value>
                <fullName>ideal</fullName>
            </value>
            <value>
                <fullName>klarna</fullName>
            </value>
            <value>
                <fullName>multibanco</fullName>
            </value>
            <value>
                <fullName>p24</fullName>
            </value>
            <value>
                <fullName>sepa_debit</fullName>
            </value>
            <value>
                <fullName>sofort</fullName>
            </value>
            <value>
                <fullName>stripe_account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>