force-app/main/default/objects/Transaction__c/fields/PaymentRequestId__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequestId__c</fullName>
    <description>Parent payment request</description>
    <label>PaymentRequestId</label>
    <referenceTo>PaymentRequest__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>