force-app/main/default/objects/Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>initiated</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>succeeded</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>failed</fullName>
                <label>Declined</label>
            </value>
            <value>
                <fullName>pending</fullName>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>