force-app/main/default/objects/Transaction__c/fields/StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>StatusMessage__c</fullName>
    <description>Status message that is received from stripe api charge response</description>
    <label>Status message</label>
    <type>TextArea</type>
</CustomField>