force-app/main/default/objects/Transaction__c/fields/Stripe_Receipt_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Receipt_URL__c</fullName>
    <label>Stripe Receipt URL</label>
    <type>Url</type>
</CustomField>