force-app/main/default/objects/Transaction__c/fields/StripeChargeId__c.field-meta.xml
<CustomField>
    <fullName>StripeChargeId__c</fullName>
    <description>Stripe charge id</description>
    <externalId>true</externalId>
    <label>StripeChargeId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>