force-app/main/default/objects/Transaction__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>