force-app/main/default/objects/Transaction__c/fields/TransactionReference__c.field-meta.xml
<CustomField>
    <fullName>TransactionReference__c</fullName>
    <displayFormat>T{0000000000}</displayFormat>
    <label>Transaction Reference Id</label>
    <type>AutoNumber</type>
</CustomField>