force-app/main/default/objects/Transaction__c/fields/uuid__c.field-meta.xml
<CustomField>
    <fullName>uuid__c</fullName>
    <label>uuid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>