force-app/main/default/objects/Transaction__c/recordTypes/Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Adjustment</fullName>
    <active>true</active>
    <description>Auto-created by webhook.</description>
    <label>Adjustment</label>
</RecordType>